--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -3298,6 +3298,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "Подключить кошелёк к децентрализованным приложениям"
     }
   },
   "signMessage" : {
