--- a/apps/ledger-live-desktop/static/i18n/ja/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ja/app.json
@@ -608,22 +608,22 @@
   },
   "stake" : {
     "noFundsModal" : {
-      "title" : "Buy, swap or receive",
-      "text" : "You do not have enough {{coin}} available to stake",
-      "description" : "Not enough funds? Don’t worry, you can securely buy, swap or receive crypto directly in Ledger Live.",
+      "title" : "購入、スワップ、受け取り",
+      "text" : "ステーキングに十分な{{coin}}がありません",
+      "description" : "資金が足りませんか？ご心配いりません。Ledger Liveで暗号資産を直接、安全に購入、スワップ、または受け取ることができます。",
       "options" : {
         "buy" : {
-          "title" : "Buy",
-          "body" : "Buy with trusted  providers"
+          "title" : "購入",
+          "body" : "信頼できるプロバイダーで購入する"
         },
         "swap" : {
-          "title" : "Swap",
-          "label" : "Popular",
-          "body" : "Convert crypto to crypto securely"
+          "title" : "スワップ",
+          "label" : "人気",
+          "body" : "安全に別の暗号資産へ交換"
         },
         "receive" : {
-          "title" : "Receive",
-          "body" : "Receive crypto in your wallet"
+          "title" : "受け取る",
+          "body" : "ウォレットで暗号資産を受け取る"
         }
       }
     }
@@ -1399,7 +1399,7 @@
         "label" : "人気"
       },
       "earn" : {
-        "title" : "報酬獲得",
+        "title" : "ステーキング",
         "description" : "Ledgerで暗号資産を運用"
       }
     }
@@ -5356,7 +5356,7 @@
       "description" : "トランザクションは、30秒以内に署名する必要があります。もう一度お試しください。"
     },
     "TronNotEnoughEnergy" : {
-      "title" : "エネルギーが必要額を満たしていません。手数料には最大30TRXが必要となります。"
+      "title" : "エネルギーが必要額を満たしていません。手数料には最大50TRXが必要となります。"
     },
     "PairingFailed" : {
       "title" : "ペアリングに失敗しました",
