File apps/ledger-live-mobile/src/locales/en/common.json was translated to ru-RU locale

--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -3420,6 +3420,15 @@
       }
     }
   },
+  "editTransaction" : {
+    "header" : "Изменение деталей транзакции",
+    "stuckTx" : "Ваша последняя исходящая транзакция застряла. Ускорьте её за счёт увеличения комиссии или отмените.",
+    "speedupTxMessage" : "Ваша транзакция сейчас проводится. При необходимости её можно ускорить за счёт увеличения комиссии или отменить.",
+    "speedupOrCancel" : "Ускорение или отмена",
+    "resubmitTxDescription" : "Повторите транзакцию с большей комиссией сети.",
+    "cancelTxDescription" : "Отправьте 0 ETH на собственный адрес. Для успешной отмены комиссия сети для новой транзакции должна быть на 10-30% выше, чем в предыдущей.",
+    "currentNetworkFee" : "Актуальная комиссия сети = {{amount}} ETH"
+  },
   "requestAccount" : {
     "stepperHeader" : {
       "selectCrypto" : "Выберите криптовалюту",
