--- a/apps/ledger-live-mobile/src/locales/tr/common.json
+++ b/apps/ledger-live-mobile/src/locales/tr/common.json
@@ -549,7 +549,7 @@
       "description" : "İşlemlerin 30 saniye içinde imzalanması gerekir. Lütfen tekrar deneyin."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Yeterince Enerji mevcut değil. Ağ ücreti 50TRX tutarına ulaşabilir."
+      "title" : "Enerji yetersiz. Ağ ücreti 50 TRX tutarına ulaşabilir."
     },
     "UpdateYourApp" : {
       "title" : "Uygulama güncellemesi gerekiyor",
@@ -3419,6 +3419,15 @@
         "description" : "Maksimum harcanabilir tutar, bir hesapta bulunan ve bir işlemde gönderilebilecek olan toplam bakiye miktarıdır."
       }
     }
+  },
+  "editTransaction" : {
+    "header" : "İşlemi Düzenleyin",
+    "stuckTx" : "En son başlattığınız \"gönderme\" işlemi takıldı. Daha yüksek bir ağ ücretiyle hızlandırın veya işlemi iptal edin.",
+    "speedupTxMessage" : "İşleminiz devam ediyor. Daha yüksek bir ağ ücretiyle hızlandırabilir ya da işlemi iptal edebilirsiniz.",
+    "speedupOrCancel" : "Hızlandırın veya İptal Edin",
+    "resubmitTxDescription" : "Bu işlemi daha yüksek bir ağ ücretiyle yeniden gönderin.",
+    "cancelTxDescription" : "Kendi adresinize 0 ETH gönderiliyor. İptal edildiğinden emin olmak için ağ ücreti, iptal edilecek işlemin ücretinden %10-30 daha yüksek olacaktır.",
+    "currentNetworkFee" : "Mevcut ağ ücreti = {{amount}} ETH"
   },
   "requestAccount" : {
     "stepperHeader" : {
