File apps/ledger-live-mobile/src/locales/en/common.json was translated to ar-AE locale

--- a/apps/ledger-live-mobile/src/locales/ar/common.json
+++ b/apps/ledger-live-mobile/src/locales/ar/common.json
@@ -3420,6 +3420,15 @@
       }
     }
   },
+  "editTransaction" : {
+    "header" : "تعديل المعاملة",
+    "stuckTx" : "أحدث معاملة \"إرسال\" لك عالقة. قم بتسريع المعاملة برسوم شبكة أعلى أو قم بإلغائها.",
+    "speedupTxMessage" : "معاملتك جارية. يمكنك تسريعها برسوم شبكة أعلى أو إلغائها.",
+    "speedupOrCancel" : "التسريع أو الإلغاء",
+    "resubmitTxDescription" : "أعد إرسال المعاملة برسوم شبكة أعلى.",
+    "cancelTxDescription" : "إرسال 0 ETH إلى عنوانك. لضمان الإلغاء، رسوم الشبكة تكون أعلى بنسبة 10-30% من رسوم المعاملة المراد إلغاؤها.",
+    "currentNetworkFee" : "رسوم الشبكة الحالية = {{amount}} ETH"
+  },
   "requestAccount" : {
     "stepperHeader" : {
       "selectCrypto" : "اختر الأصول المشفرة",
