File apps/ledger-live-mobile/src/locales/en/common.json was translated to fr-FR locale

--- a/apps/ledger-live-mobile/src/locales/fr/common.json
+++ b/apps/ledger-live-mobile/src/locales/fr/common.json
@@ -549,7 +549,7 @@
       "description" : "Les transactions doivent être signées dans les 30 secondes. Veuillez réessayer."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Énergie inférieure à la quantité requise. Vous pourriez payer des frais allant jusqu’à 50 TRX."
+      "title" : "Énergie inférieure à la quantité requise. Vous pourriez payer des frais allant jusqu’à 50 TRX."
     },
     "UpdateYourApp" : {
       "title" : "Mise à jour de l’app nécessaire",
@@ -1141,7 +1141,7 @@
   "installSetOfApps" : {
     "restore" : {
       "title" : "Installer les mêmes apps que sur {{deviceName}} ?",
-      "titleNoDeviceName" : "Installer les mêmes apps que sur votre Ledger précédent ?",
+      "titleNoDeviceName" : "Installer les mêmes apps que sur votre autre Ledger ?",
       "installCTA" : "Installer maintenant",
       "skipCTA" : "Plus tard"
     },
@@ -3419,6 +3419,15 @@
         "description" : "Le montant maximal à dépenser est le solde total dans un compte qui est disponible pour effectuer une transaction."
       }
     }
+  },
+  "editTransaction" : {
+    "header" : "Modifier la transaction",
+    "stuckTx" : "Votre dernière transaction sortante est bloquée. Accélérez-la en augmentant les frais de réseau, ou annulez-la.",
+    "speedupTxMessage" : "Votre transaction est en cours. Vous pouvez l’accélérer en augmentant les frais de réseau, ou l’annuler.",
+    "speedupOrCancel" : "Accélérer ou annuler",
+    "resubmitTxDescription" : "Renvoyez cette transaction avec des frais de réseau plus élevés.",
+    "cancelTxDescription" : "Envoyez 0 ETH à votre propre adresse. Les frais de réseau doivent être de 10 à 30 % plus élevés que les frais de la transaction à annuler.",
+    "currentNetworkFee" : "Frais de réseau actuels = {{amount}} ETH"
   },
   "requestAccount" : {
     "stepperHeader" : {
