File apps/ledger-live-mobile/src/locales/en/common.json was translated to ja-JP locale

--- a/apps/ledger-live-mobile/src/locales/ja/common.json
+++ b/apps/ledger-live-mobile/src/locales/ja/common.json
@@ -549,7 +549,7 @@
       "description" : "トランザクションは、30秒以内に署名する必要があります。もう一度お試しください。"
     },
     "TronNotEnoughEnergy" : {
-      "title" : "エネルギーが必要額を満たしていません。手数料には最大30TRXが必要となります。"
+      "title" : "エネルギーが必要額を満たしていません。手数料には最大50TRXが必要となります。"
     },
     "UpdateYourApp" : {
       "title" : "アプリのアップデートが必要です。",
@@ -3419,6 +3419,15 @@
         "description" : "最大利用可能額は、1回のトランザクションで送金できる、1つのアカウントの合計残高です。"
       }
     }
+  },
+  "editTransaction" : {
+    "header" : "トランザクションを編集",
+    "stuckTx" : "直近の「送信」トランザクションが滞っています。さらに高いネットワーク手数料でトランザクションの速度を上げるか、キャンセルしてください。",
+    "speedupTxMessage" : "お客様のトランザクションは進行中です。より高いネットワーク手数料で速度を上げるか、キャンセルが可能です。",
+    "speedupOrCancel" : "速度を上げる、またはキャンセルする",
+    "resubmitTxDescription" : "さらに高いネットワーク手数料でこのトランザクションを再送信します。",
+    "cancelTxDescription" : "0ETHをお客様自身のアドレスに送信中です。キャンセルを確定するため、ネットワーク手数料はキャンセルされるトランザクション手数料よりも 10～30%高くなります。",
+    "currentNetworkFee" : "現在のネットワーク手数料 = {{amount}} ETH"
   },
   "requestAccount" : {
     "stepperHeader" : {
