File apps/ledger-live-desktop/static/i18n/en/app.json was translated to ru-RU locale

--- a/apps/ledger-live-desktop/static/i18n/ru/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ru/app.json
@@ -173,7 +173,43 @@
       "REGISTER" : "Зарегистрировано",
       "STAKE" : "В стейкинге",
       "UNSTAKE" : "Выведено из стейкинга",
-      "WITHDRAW_UNSTAKED" : "Вывод"
+      "WITHDRAW_UNSTAKED" : "Вывод",
+      "SENDING" : "Отправка"
+    },
+    "edit" : {
+      "title" : "Ускорение или отмена",
+      "description" : "Ваша транзакция сейчас проводится. При необходимости её можно ускорить за счёт увеличения комиссии или отменить.",
+      "stuckDescription" : "Ваша транзакция застряла. Ускорьте её за счёт увеличения комиссии или отмените.",
+      "previousFeesInfo" : "Комиссия сети за предыдущую транзакцию",
+      "panel" : {
+        "title" : "Ускорение или отмена",
+        "description" : "Ваша последняя исходящая транзакция застряла. Ускорьте её за счёт увеличения комиссии или отмените."
+      },
+      "speedUp" : {
+        "title" : "Ускорение",
+        "description" : "Повторная отправка транзакции с большей комиссией сети."
+      },
+      "cancel" : {
+        "title" : "Отменить",
+        "description" : "Отправьте 0 {{ticker}} на собственный адрес с большей комиссией."
+      },
+      "steps" : {
+        "method" : {
+          "title" : "Метод"
+        },
+        "fees" : {
+          "title" : "Комиссия"
+        },
+        "summary" : {
+          "title" : "Сводка"
+        },
+        "device" : {
+          "title" : "Устройство"
+        },
+        "confirmation" : {
+          "title" : "Подтверждение"
+        }
+      }
     }
   },
   "byteSize" : {
@@ -1399,7 +1435,7 @@
         "label" : "Популярно"
       },
       "earn" : {
-        "title" : "Приумножить",
+        "title" : "Стейкинг",
         "description" : "Приумножайте криптовалюты вместе с Ledger"
       }
     }
